Basic layout of Section with aside

--- a/home.html
+++ b/home.html
@@ -17,7 +17,7 @@
                 <img src="Images/logo.png" alt="Logo" id="header-image">
             </div>
             <div id="search">
-                <input type="search" placeholder="Search for products brands & more" id="search-field" >      
+                <input type="search" placeholder="&nbsp;&nbsp;Search for products brands & more" id="search-field" >      
                 <!-- <input type="button" value="" id="search-sym"> &#128270 -->
                 
             </div>
@@ -35,12 +35,61 @@
 
         </header>
 
-        <nav>
-
+        <nav id="nav-bar">
+            <div id="item1" class="nav-item">
+                <img src="Images/Nav-images/47e5c31ef7dcce1e.webp" alt="offer" class="nav-image">
+                <p>Offers</p>
+            </div>
+            <div id="item2" class="nav-item">
+                <img src="Images/Nav-images/beauty.webp" alt="beauty" class="nav-image">
+                <p>Beauty</p>
+            </div>
+            <div id="item3" class="nav-item">
+                <img src="Images/Nav-images/electronics.webp" alt="electronics" class="nav-image">
+                <p>Electronics</p>
+            </div>
+            <div id="item4" class="nav-item">
+                <img src="Images/Nav-images/fashion.webp" alt="fashion" class="nav-image">
+                <p>Fashion</p>
+            </div>
+            <div id="item5" class="nav-item">
+                <img src="Images/Nav-images/flights.webp" alt="flights" class="nav-image">
+                <p>Flights</p>
+            </div>
+            <div id="item6" class="nav-item">
+                <img src="Images/Nav-images/grocery.webp" alt="grocery" class="nav-image">
+                <p>Grocery</p>
+            </div>
+            <div id="item7" class="nav-item">
+                <img src="Images/Nav-images/home.webp" alt="home" class="nav-image">
+                <p>Home</p>
+            </div>
+            <div id="item8" class="nav-item">
+                <img src="Images/Nav-images/mobile-tablet.webp" alt="mobile-tablet" class="nav-image">
+                <p>Mobiles & Tablet</p>
+            </div>
+            <div id="item9" class="nav-item">
+                <img src="Images/Nav-images/tv-appliances.webp" alt="tv-appliances" class="nav-image">
+                <p>Tv Aplliances</p>
+            </div>
         </nav>
 
-        <div>
+        <div id="main-area">
+           <section id="dealsOfDay">
+                <div id="front-line">
+                    <p>aaa</p>
+                </div>
+                <div id="below-line">
 
+                </div>
+           </section>
+           <div id="advertise">
+            <aside>
+                <p>aaaaaaaaaaaaaaa</p>
+               </aside>
+
+           </div>
+           
         </div>
 
     </div>
