--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="responsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -145,6 +146,9 @@
 
 
                 <div id="below-line">
+                    <!-- <div id="child">
+
+                    </div> -->
                     <div id="dealitem1" class="deal_item">
                         <div id="boxing">
                             <a href="#"><img src="Images/main-images/1-water-bottol.webp" alt="" class="deal_img">
@@ -269,12 +273,58 @@
                             Lenovo,Mac,Hp
                         </p>
                     </div>
+
+
+
+
+
                 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+                
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
             </section>
             <div id="advertise">
                 <aside>
                     <a href="#"></a><img src="Images/main-images/adv.jpg" alt="advertisement" id="adv-img">
+                    <a href="#"></a><img src="Images/main-images/long-ad.webp" alt="advertisement" id="adv-2-img">
                 </aside>
 
             </div>
