--- a/home.html
+++ b/home.html
@@ -61,9 +61,19 @@
                 <input type="button" value="Login" id="login-btn">
             </div>
             <div id="more">
+                <button class="dropbtn"> More
+                    <i class="fa fa-caret-down"></i>
+                </button>
+                <div class="dropdown-content">
+                    <a href="#">Sign Up</a>
+                    <a href="#">Vouchars</a>
+                    <a href="#">Download the app</a>
+                  </div>
+
+<!--                 
                 <a href="#" id="more">
                 <p>More </p>
-            </a>
+            </a> -->
             </div>
             <div id="cart">
                 
