--- a/home.html
+++ b/home.html
@@ -132,6 +132,9 @@
                 <img src="Images/Nav-images/tv-appliances.webp" alt="tv-appliances" class="nav-image"></a>
                 <p>Tv Aplliances</p>
             </div>
+            <div class="clear">
+
+            </div>
         </nav>
 
         <div id="main-area">
